update HTML for new GUI

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,12 +13,14 @@
 </head>
 
 <body>
-    <h1>Enter your Weapon!</h1>
-    <form action="#">
-        <input type="text" id="userInput" placeholder="your input" name="userInput">
-        <input type="text" id="computerInput" name="computerInput">
-        <button>Clash!</button>
-    </form>
+    <h1>Choose your Weapon</h1>
+    <h2>First to 5 wins</h2>
+    <p>0:0</p>
+    <div>
+        <section id="rock">&#129704;</section>
+        <section id="paper">&#128478;</section>
+        <section id="scissors"> &#9986;</section>
+    </div>
     <script src="script.js"></script>
 </body>
 
